# papaya-library-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: Papaya.hpp
src/: Papaya.cpp  PapayaError.cpp  PapayaPrivate.cpp
